[package]
name = "app-macros"
authors.workspace = true
version.workspace = true
edition.workspace = true
description = "Custom procedural macros for the Leptos-based web application."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[features]
default = []
hydrate = []
ssr = []
